# kde1-kdegames

./: .cvsignore  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.cvs  README  acconfig.h  config.h  config.h.in  configure.in.1  configure.in.2  configure.in.in  kdegames.spec  kdegames.spec.in
kabalone/: .cvsignore  AbTop.cpp  AbTop.h  Board.cpp  Board.h  BoardWidget.h  CHANGES  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Move.h  README  Spy.cpp  kabalone.cpp  kabalone.kdelnk
kabalone/html/: CMakeLists.txt  index-4.html  index.html  kabalone.html
kabalone/icon/: kabalone.xpm
kabalone/toolbar/: CMakeLists.txt
kasteroids/: .cvsignore  CMakeLists.txt  ChangeLog  Kasteroids.kdelnk  Makefile.am  Makefile.in  README  kasteroids.kdelnk  kasteroids.xpm  kastmsg.cpp  kastmsg.h  main.cpp  mini-kasteroids.xpm  sprites.h  toplevel.cpp  toplevel.h  version.h  view.cpp  view.h
kasteroids/QwSpriteField/: CMakeLists.txt  QwSpriteField-template.cpp  QwSpriteField.cpp
kasteroids/html/: CMakeLists.txt
kasteroids/sprites/: Makefile.am  Makefile.in  pngtoppmpgm
kblackbox/: .cvsignore  CMakeLists.txt  kbbgame.cpp  kbbgfx.cpp  kblackbox.kdelnk
kblackbox/pics/: CMakeLists.txt
kmahjongg/: .cvsignore  CMakeLists.txt  kmahjongg.kdelnk
kmines/: .cvsignore  CMakeLists.txt
kmines/data/: CMakeLists.txt  kmines.kdelnk
konquest/: .cvsignore  CMakeLists.txt  Konquest.cc  Konquest.kdelnk
konquest/docs/: CMakeLists.txt
konquest/pics/: CMakeLists.txt
kpat/: .cvsignore  CMakeLists.txt  kpat.kdelnk
kpoker/: .cvsignore  CHANGES  CMakeLists.txt  Makefile.am  Makefile.in  README  TODO  defines.h  global.h  kpaint.cpp  kpaint.h  kpoker-0.1.2.lsm  kpoker-0.2.lsm  kpoker.cpp  kpoker.h  kpoker.kdelnk  kpoker.xpm  main.cpp  mini-kpoker.xpm  top.cpp  top.h  version.h
kpoker/bitmaps/: Makefile.am  Makefile.in
kpoker/docs/: CMakeLists.txt  Makefile.am  Makefile.in  index-1.html  index-2.html  index-3.html  index.html  index.sgml  kpoker-1.html  kpoker-2.html  kpoker.html  kpoker.sgml
kpoker/sounds/: Makefile.am  Makefile.in
kreversi/: .cvsignore  CMakeLists.txt  kreversi.kdelnk
ksame/: .cvsignore  CMakeLists.txt  HighScore.cpp  HighScore.h  KSameWidget.cpp  KSameWidget.h  Ksame.kdelnk  Makefile  Makefile.am  Makefile.in  ScoreWidget.cpp  ScoreWidget.h  StoneWidget.cpp  StoneWidget.h  bintoinc.c  ksame.html  ksame.kdelnk  ksame.xpm  main.cpp  mini-ksame.xpm  stonemask3.xbm  version.h
ksame/docs/: CMakeLists.txt
kshisen/: .cvsignore  CMakeLists.txt  kshisen.kdelnk
ksirtet/: .cvsignore  CHANGELOG  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  TODO  board.cpp  board.h  defines.h  dialogs.cpp  dialogs.h  field.cpp  field.h  ggboard.cpp  ggboard.h  gtboard.cpp  gtboard.h  gtetris.h  hack.cpp  hack.h  index-1.html  index-2.html  ktetris-1.0.0.lsm  ktetris.kdelnk  main.cpp  main.h  mini-ktetris.xpm  net.cpp  net.h  spiece.cpp  tpiece.cpp  version.h
ksirtet/data/: Makefile.am  index-2.html  index-3.html  ksirtet.kdelnk  ksirtet.xpm  ktetris.kdelnk
ksmiletris/: .cvsignore  CMakeLists.txt  Makefile.am  gamewidget.cpp  gamewidget.h  gamewindow.cpp  gamewindow.h  ksmiletris.h  ksmiletris.kdelnk  ksmiletris.xpm  main.cpp  mirrorwidget.cpp  mirrorwidget.h  newscoredialog.cpp  npiecewidget.cpp  npiecewidget.h  scoredialog.cpp  screenwidget.cpp  screenwidget.h
ksmiletris/data/: CMakeLists.txt
ksmiletris/wav/: CMakeLists.txt
ksnake/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  README  ball.cpp  ball.h  basket.cpp  basket.h  board.h  game.cpp  game.h  keys.cpp  keys.h  ksnake-0.1.lsm  ksnake.kdelnk  ksnake.xpm  lcdrange.cpp  level.cpp  level.h  levels.cpp  main.cpp  mini-ksnake.xpm  pixServer.cpp  pixServer.h  progress.cpp  rattler.cpp  rattler.h  score.cpp  score.h  snake.cpp  snake.h  startroom.cpp  trys.cpp  view.cpp
ksnake/data/: Makefile  Makefile.am  Makefile.in  highScores
ksnake/doc/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  index.html
ksokoban/: .cvsignore  CMakeLists.txt  HtmlPrinter.C  MainWindow.C  ModalLabel.C  PlayField.C  main.C
ksokoban/images/: .cvsignore  bin2c.c
ktetris/: CHANGELOG  LICENSE.readme  Makefile.am  Makefile.in  README  board.cpp  board.h  defines.h  dialogs.cpp  field.cpp  field.h  ggboard.cpp  ggboard.h  gtboard.cpp  gtboard.h  gtetris.cpp  gtetris.h  index.html  ktetris.kdelnk  ktetris.xpm  main.cpp  main.h  net.cpp  net.h  spiece.cpp  spiece.h  tpiece.cpp  tpiece.h  version.h
ktetris/data/: Makefile.am  index-1.html  index-4.html  index.html  index.sgml  ksirtet.kdelnk  ktetris.kdelnk
po/: CMakeLists.txt  Makefile.am  Reversi.po  de_Reversi.gmo  de_Reversi.po  de_kpat.gmo  de_kpat.po  kabalone.po  kabalone.pot  kasteroids.pot  kblackbox.pot  kmahjongg.po  kmahjongg.pot  kmines.pot  konquest.pot  kpat.po  kpat.pot  kpoker.pot  kreversi.pot  ksame.pot  kshisen.pot  ksmiletris.pot  ksnake.pot  ksokoban.pot  ktetris.pot
po/br/: CMakeLists.txt  kabalone.po  kblackbox.po  kmahjongg.po  konquest.po  kreversi.po  ksame.po  ksokoban.po
po/cs/: CMakeLists.txt  Makefile.am  Reversi.po  kabalone.po  kasteroids.po  kblackbox.po  kmahjongg.po  kmines.po  kpat.po  kpoker.po  kreversi.po  ksame.po  kshisen.po  ksnake.po  ksokoban.po  ktetris.po
po/da/: CMakeLists.txt  Makefile.am  kabalone.po  kasteroids.po  kblackbox.po  kmahjongg.po  kmines.po  konquest.po  kpat.po  kpoker.po  kreversi.po  ksame.po  kshisen.po  ksirtet.po  ksmiletris.po  ksnake.po  ksokoban.po  ktetris.po
po/de/: CMakeLists.txt  Makefile.am  Reversi.po  kabalone.po  kasteroids.po  kblackbox.po  kmahjongg.po  kmines.po  konquest.po  kpat.po  kpoker.po  kreversi.po  ksame.po  kshisen.po  ksmiletris.po  ksnake.po  ksokoban.po  ktetris.po
po/el/: CMakeLists.txt  Makefile.am  kmahjongg.po  kpat.po  kreversi.po
po/eo/: CMakeLists.txt  Makefile.am  kabalone.po  kasteroids.po  kblackbox.po  kmahjongg.po  kmines.po  konquest.po  kpat.po  kpoker.po  kreversi.po  ksame.po  kshisen.po  ksmiletris.po  ksnake.po  ksokoban.po  ktetris.po
po/es/: .cvsignore  CMakeLists.txt  Makefile.am  kabalone.po  kasteroids.po  kblackbox.po  kmahjongg.po  kpat.po  (+10 more)
(+543 files in other folders)
